code refactor and add support for iis http server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ add_executable(ezremote_client
   source/web/urn.cpp
   source/webdav/client.cpp
   source/http/httplib.cpp
+  source/http/baseclient.cpp
+  source/http/iis.cpp
   source/http/npxserve.cpp
   source/actions.cpp
   source/config.cpp
