add a simple text editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,6 @@ add_executable(ezremote_client
   source/http/iis.cpp
   source/http/nginx.cpp
   source/http/npxserve.cpp
-  source/xt_editor/editor.cpp
-  source/xt_editor/getline.c
   source/actions.cpp
   source/config.cpp
   source/fs.cpp
@@ -59,6 +57,7 @@ add_self(ezremote_client)
 add_pkg(ezremote_client ${CMAKE_SOURCE_DIR}/data "RMTC00001" "ezRemote Client" "01.02" 32 0)
 
 target_link_libraries(ezremote_client
+  dbglogger
   c
   c++
   png
