--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,9 +61,10 @@ add_executable(ezremote_client
 
 add_self(ezremote_client)
 
-add_pkg(ezremote_client ${CMAKE_SOURCE_DIR}/data "RMTC00001" "ezRemote Client" "01.07" 32 0)
+add_pkg(ezremote_client ${CMAKE_SOURCE_DIR}/data "RMTC00001" "ezRemote Client" "01.08" 32 0)
 
 target_link_libraries(ezremote_client
+  dbglogger
   c
   c++
   png
