add ability to install shared URL from web interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,12 @@ add_executable(ezremote_client
   source/clients/webdavclient.cpp
   source/clients/sftpclient.cpp
   source/clients/rclone.cpp
-  source/filehost/gdrive_host.cpp
+  source/filehost/directhost.cpp
+  source/filehost/gdrive.cpp
+  source/filehost/filehost.cpp
+  source/filehost/1fichier.cpp
+  source/filehost/mediafire.cpp
+  source/filehost/pixeldrain.cpp
   source/server/http_server.cpp
   source/actions.cpp
   source/config.cpp
@@ -67,7 +72,6 @@ add_self(ezremote_client)
 add_pkg(ezremote_client ${CMAKE_SOURCE_DIR}/data "RMTC00001" "ezRemote Client" "01.10" 32 0)
 
 target_link_libraries(ezremote_client
-  dbglogger
   c
   c++
   png
